--- a/RTN-009.tex
+++ b/RTN-009.tex
@@ -16,7 +16,7 @@
 % \setDocSubtitle{A subtitle}
 
 \author{%
-Leanne Guy
+Leanne~Guy, Austin~Roberts, \v{Z}eljko~Ivezi\'c
 }
 
 \setDocRef{RTN-009}
@@ -36,7 +36,7 @@ This document provides a first set of Key Performance Metrics (KPM) for Rubin Ob
 % Fields: VERSION, DATE, DESCRIPTION, OWNER NAME.
 % See LPM-51 for version number policy.
 \setDocChangeRecord{%
-  \addtohist{1}{YYYY-MM-DD}{Unreleased.}{Leanne Guy}
+  \addtohist{0.1}{2020-09-29}{Initial draft}{Leanne Guy}
 }
 
 
