--- a/RTN-009.tex
+++ b/RTN-009.tex
@@ -50,6 +50,21 @@ This document provides a first set of Key Performance Metrics (KPM) for Rubin Ob
 % ADD CONTENT HERE
 % You can also use the \input command to include several content files.
 
+\section{Introduction}
+For the first 10 years of its life, the Rubin Observatory will be fully dedicated to delivering the Legacy Survey of Space and Time (LSST). 
+The LSST Science Requirements document \citeds{LPM-17} provides a detailed description of the survey goals and science-driven requirements for the data products. 
+During the construction phase, the project has been working towards defining and verifying the system performance metrics that the Rubin Observatory must meet at the end of its construction phase in order to deliver LSST. 
+These performance metrics provide the initial basis for the Key Performance Metrics (KPM) for Rubin Observatory in operations.
+As the project progresses through the ten-year survey, we expect to build upon these initial KPMs to provide a full system optimization strategy.  
+
+
+\section{Initial Key Performance Metrics}
+The LSST will collect ~2 million visits in 10 years. 
+Each of these images must be of adequate depth and image quality to deliver the science goals of LSST. 
+Additionally, the image processing must efficiently produce the LSST data products; fully calibrated images, alerts and  catalogs.
+
+
+
 \appendix
 % Include all the relevant bib files.
 % https://lsst-texmf.lsst.io/lsstdoc.html#bibliographies
@@ -62,6 +77,7 @@ This document provides a first set of Key Performance Metrics (KPM) for Rubin Ob
 \input{acronyms.tex}
 % If you want glossary uncomment below -- comment out the two lines above
 %\printglossaries
+
 
 
 
