Added initial KPM outine

--- a/RTN-009.tex
+++ b/RTN-009.tex
@@ -52,18 +52,41 @@ This document provides a first set of Key Performance Metrics (KPM) for Rubin Ob
 
 \section{Introduction}
 For the first 10 years of its life, the Rubin Observatory will be fully dedicated to delivering the Legacy Survey of Space and Time (LSST). 
-The LSST Science Requirements document \citeds{LPM-17} provides a detailed description of the survey goals and science-driven requirements for the data products. 
+The LSST Science Requirements document (SRD) \citeds{LPM-17} provides a detailed description of the survey goals and science-driven requirements for the data products. 
 During the construction phase, the project has been working towards defining and verifying the system performance metrics that the Rubin Observatory must meet at the end of its construction phase in order to deliver LSST. 
 These performance metrics provide the initial basis for the Key Performance Metrics (KPM) for Rubin Observatory in operations.
 As the project progresses through the ten-year survey, we expect to build upon these initial KPMs to provide a full system optimization strategy.  
 
 
-\section{Initial Key Performance Metrics}
+\section{Detailed Description of the  Key Performance Metrics}
 The LSST will collect ~2 million visits in 10 years. 
 Each of these images must be of adequate depth and image quality to deliver the science goals of LSST. 
-Additionally, the image processing must efficiently produce the LSST data products; fully calibrated images, alerts and  catalogs.
+Additionally, the image processing must efficiently produce the LSST data products; fully calibrated images, alerts and catalogs.  The following lays out the initial key performance metrics for Rubin Operations. 
 
 
+ \subsection{Definition of specified metrics}
+ As per the SRD, for each quantity specifying a metric, we identify two values: a minimum specification,
+and a design specification.
+
+The minimum specification shall represent the minimum capability or accuracy required of the system in order to achieve its scientific aims. 
+If the design analysis clearly demonstrates that a minimum specification requirement cannot be met, the science drivers that led to the specification will be reevaluated and an estimate the scientific impact of the failure to meet the specification, will be reported to the Operations Director.
+
+The design specification represents the system design point that will be used as the basis for
+developing engineering tolerances. 
+In some cases, stretch goals are specified. 
+These are desirable system capabilities which will enhance scientific return if they can be achieved. 
+
+Stretch goals are to be pursued if they do not significantly increase cost, schedule or risk. 
+Situations where enhanced capability beyond the design specification compromises cost, schedule, or other system parameters must be evaluated on a case-by-case basis to decide whether they make sense in the context of the whole system.
+In addition to numerical requirements, a brief reference to the science program that places the strongest constraints is also provided.
+
+\subsubsection{Survey speed}
+
+\subsubsection{Effective Survey speed}
+
+Include here Zeljko's effective survey speed image 
+
+\subsubsection{Image quality}
 
 \appendix
 % Include all the relevant bib files.
